--- a/main_page.html
+++ b/main_page.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> ELSYS </title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="StyleHacktues.css">
+		<link rel="stylesheet" type="text/css" href="style1.css">
 	</head>
 	<body class="background">
 
