--- a/main_page.html
+++ b/main_page.html
@@ -4,6 +4,7 @@
 		<title> ELSYS </title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style1.css">
+		
 	</head>
 	<body class="background">
 
@@ -119,7 +120,9 @@
 
 			<!-- SDG -->
 		</div>
-
+<iframe src="iveto.html" width='100%' height='300'>
+  <p>Your browser does not support iframes.</p>
+</iframe>
 
 	</body>
 	</html>
